--- a/.github/workflows/main_app-advanced3-test1.yml
+++ b/.github/workflows/main_app-advanced3-test1.yml
@@ -38,7 +38,7 @@ jobs:
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip . -x "venv/*"
+        run: zip -r release.zip . -x "venv/*" ".git/*" ".github/*" ".gitignore" "node_modules/*" "__pycache__/*" "*.pyc" "*.pyo"
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
@@ -68,4 +68,4 @@ jobs:
         with:
           app-name: 'app-advanced3-test1'
           slot-name: 'production' # 小文字に変更
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1ECE3B7BC59D47669E981986D80BD89C }}
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
