--- a/.github/workflows/main_app-advanced3-test1.yml
+++ b/.github/workflows/main_app-advanced3-test1.yml
@@ -36,9 +36,9 @@ jobs:
           pip install -r requirements.txt
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-
       - name: Zip artifact for deployment
-        run: zip -r release.zip . -x "venv/*" ".git/*" ".github/*" ".gitignore" "node_modules/*" "__pycache__/*" "*.pyc" "*.pyo"
+        run: zip -r release.zip . -x "venv/**" ".git/**" ".github/**" ".gitignore" "node_modules/**" "__pycache__/**" "*.pyc" "*.pyo"
+      
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
